abc/another-try.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: ingress.k8s.aws/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
  - host: ingo.healthresearch.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
      - path: /pisal
        pathType: Prefix
        backend:
          service:
            name: pisal-newprod
            port:
              number: 80
      - path: /ealenecho
        pathType: Prefix
        backend:
          service:
            name: ealenecho
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pisal-newprod
            port:
              number: 80
