abc/aws-ingress-default-site.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.root-response: '{"Type": "fixed-response", "FixedResponseConfig": {"ContentType": "text/html", "StatusCode": "200", "ContentBody": "<html><body><h1>Welcome to HealthResearch.org</h1><p>Please access specific applications through their dedicated paths.</p></body></html>"}}'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
  name: aws-ingress
spec:
  ingressClassName: alb
  rules:
  - host: ingo.healthresearch.org
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /
      - backend:
          service:
            name: default-site  # default-site running in nginx pod
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: pisal-newprod
            port:
              number: 80
        path: /pisal
        pathType: Prefix
      - backend:
          service:
            name: ealenecho
            port:
              number: 8080
        path: /ealenecho
        pathType: Prefix
      - backend:
          service:
            name: pisal-newprod
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: internal-k8s-default-awsingre-32ebfbcf83-1182275225.us-east-1.elb.amazonaws.com
